# reviews-insights

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SAMPLE_REPORT.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 07d7be8aee36_add_reviews_table.py  8f3c2b9d5e14_add_analysis_tables.py  b4ece80b4ab4_update_insights_add_review_id.py  ff9349e35b20_add_is_analyzed_flag_to_reviews.py
src/application/services/: __init__.py  review_analysis_service.py
src/config/: settings.py
src/infrastructure/collectors/: apple_store_collector.py  base.py  factory.py
src/infrastructure/database/: __init__.py  base.py  models.py
src/infrastructure/llm/: __init__.py  base.py  factory.py  openai_service.py
src/infrastructure/llm/prompts/: __init__.py  insights_generation.txt  keywords_extraction.txt  sentiment_analysis.txt
src/infrastructure/llm/system_messages/: __init__.py  insights_generator.txt  review_analyst.txt
src/infrastructure/repositories/: __init__.py  analysis_repository.py  review_repository.py
src/infrastructure/text_processing/: __init__.py  text_processor.py
src/presentation/api/: main.py
src/presentation/api/v1/: schemas.py
src/presentation/api/v1/endpoints/: apple_store.py
static/: dashboard.html
